--- a/css/main.css
+++ b/css/main.css
@@ -1,27 +1,31 @@
 /* 1. SETTINGS - Variables, configs */
 @import url('variables.css');
+@import url('base/global.css');
 
 /* 2. GENERIC - Reset, normalize */
-
+@import url('base/reset.css');
 
 /* 3. ELEMENTS - Base HTML elements */
-@import url('typography.css');
-@import url('components/style.css'); 
+@import url('base/typography.css');
+
 
 /* 4. LAYOUT - Grid systems, containers */
 @import url('layout/grid.css');
 @import url('layout/containers.css');
 @import url('layout/responsive.css');
+@import url('layout/spacing.css');
 
 /* 5. COMPONENTS - Reusable UI components */
 @import url('components/buttons.css');
-@import url('components/forms.css');
 @import url('components/cards.css');
-@import url('components/header.css');
 @import url('components/footer.css');
+@import url('components/forms.css');
+@import url('components/header.css');
+@import url('components/links.css');
 
 /* 6. PAGES - Page-specific styles (use sparingly) */
 @import url('pages/contact-us.css');
 @import url('pages/term-and-conditions.css');
+@import url('pages/privacy-policy.css');
 
 /* 7. UTILITIES - Helper classes (if needed) */
